This is the Changelogs for GregTech6-Unofficial
6.13.05: (Not released yet).
Nothing

6.13.04: (Not released yet).
Nothing

6.13.03: (Not released yet).
Nothing

6.13.02: (Not released yet).
[FIXED]Titanium Niobium Carbide Gas and Engine Turbine Main Housing recipes use Dense Titanium Niobium Carbide Wall 
[ADDED]Gas Oil now can be Burned or put in Engine
[WIP]
MultyBlock Particle Collider.Build like fusion reactor.
Now you can build it but its purpose will be added in the future.
[WIP]
Subatomic particles and antimatter.

6.13.01:
[ADDED]General version for Autoclave.

6.13.00:
[FIXED]Gearboxes sometimes breaking/overloading on World Load.
[FIXED]A Rare NEI Recipe List Crash. (Concurrent Modification Exception when clicking Progress Bar)
[FIXED]Bedrock Ores did not generate Indicator Flowers and Indicator Rocks in Twilight Forest due to its Terrains normal Height of Y31 instead of Y63.
[FIXED]The Code that made Plates, Ingots and Rocks placeable did not check if the Stack was already a Block, meaning it just replaced things like Greatwood Planks or Silverwood Planks with the Stack-of-Plates Block.
[CHANGED]Temperature of plasma set to 4000K
[CHANGED]Implosion Compressor now accept EU to do process.
[CHANGED]The Matter Replicators are working 4 times than before.
[CHANGED]For MultyBlock Heat Exchanger now need Thermomechanical Block.
[CHANGED]Now Distillation Tower need 3x3x12 Distillation Tower Parts to build.
[CHANGED]Fusion now accept energy LU to do process.And it dont output energy now.Some of its recipes now output plasma.
[CHANGED]Cryo Distillation Tower now use Frost Proof Machine Casing instead of Distillation Tower Part
[CHANGED]Engine recipe now use medium pipe.Iridium Engine now output 1024RU.Tungsten now output 512RU and its efficiency is a little more than tungstensteel Engine
[CHANGED]
Now MultiBlock Heat Exchanger has 3 texture to build.
TungstenSteel/Tungsten/Tantalum Hafnium Carbide.
They can output HU:16384/32768/131072.
[CHANGED]