@@ -1116,9 +1116,9 @@ public class Loader_MultiTileEntities implements Runnable {
 		aMat = MT.Os;                   aRegistry.add("Large Osmium Coil"                                   , "Multiblock Machines", 18044, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "coil"                    , NBT_DESIGNS, 1), "WWW", "WxW", "WWW", 'W', OP.wireGt04.dat(aMat));
 		aMat = MT.Ir;                   aRegistry.add("Large Iridium Coil"                                  , "Multiblock Machines", 18045, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "coil"                    , NBT_DESIGNS, 1), "WWW", "WxW", "WWW", 'W', OP.wireGt04.dat(aMat));
 		
-		aMat = MT.TungstenSteel;        aRegistry.add("TungstenSteel Thermomechanical block"                , "Multiblock Machines", 18109, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  10.0F, NBT_RESISTANCE,  10.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "metalwall"               , NBT_DESIGNS, 7), "DDD", "PMP", "DDD", 'M', aRegistry.getItem(18023), 'D', OP.plateDense.dat(MT.AnnealedCopper), 'P', OP.pipeSmall.dat(ANY.Cu));
-		aMat = ANY.W;                   aRegistry.add("Tungsten Thermomechanical block"                     , "Multiblock Machines", 18110, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  10.0F, NBT_RESISTANCE,  10.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "metalwall"               , NBT_DESIGNS, 7), "DDD", "PMP", "DDD", 'M', aRegistry.getItem(18024), 'D', OP.plateDense.dat(MT.AnnealedCopper), 'P', OP.pipeSmall.dat(ANY.Cu));
-		aMat = MT.Ta4HfC5;              aRegistry.add("Tantalum Hafnium Carbide Thermomechanical block"     , "Multiblock Machines", 18111, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  10.0F, NBT_RESISTANCE,  10.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "metalwall"               , NBT_DESIGNS, 7), "DDD", "PMP", "DDD", 'M', aRegistry.getItem(18032), 'D', OP.plateDense.dat(MT.AnnealedCopper), 'P', OP.pipeSmall.dat(ANY.Cu));
+		aMat = MT.TungstenSteel;        aRegistry.add("TungstenSteel Thermomechanical Block"                , "Multiblock Machines", 18109, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  10.0F, NBT_RESISTANCE,  10.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "metalwall"               , NBT_DESIGNS, 7), "DDD", "PMP", "DDD", 'M', aRegistry.getItem(18023), 'D', OP.plateDense.dat(MT.AnnealedCopper), 'P', OP.pipeSmall.dat(ANY.Cu));
+		aMat = ANY.W;                   aRegistry.add("Tungsten Thermomechanical Block"                     , "Multiblock Machines", 18110, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  10.0F, NBT_RESISTANCE,  10.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "metalwall"               , NBT_DESIGNS, 7), "DDD", "PMP", "DDD", 'M', aRegistry.getItem(18024), 'D', OP.plateDense.dat(MT.AnnealedCopper), 'P', OP.pipeSmall.dat(ANY.Cu));
+		aMat = MT.Ta4HfC5;              aRegistry.add("Tantalum Hafnium Carbide Thermomechanical Block"     , "Multiblock Machines", 18111, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  10.0F, NBT_RESISTANCE,  10.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "metalwall"               , NBT_DESIGNS, 7), "DDD", "PMP", "DDD", 'M', aRegistry.getItem(18032), 'D', OP.plateDense.dat(MT.AnnealedCopper), 'P', OP.pipeSmall.dat(ANY.Cu));
 		
 		aMat = MT.Al;                   aRegistry.add("Frost Proof Machine Casing"                          , "Multiblock Machines", 18112, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  10.0F, NBT_RESISTANCE,  10.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "distillationtowerparts"  , NBT_DESIGNS, 7), "DhD", "DMD", "DwD", 'M', aRegistry.getItem(18002), 'D', OP.plate.dat(MT.Al));
 		aMat = MT.StainlessSteel;       aRegistry.add("Cracking Tower Part"                                 , "Multiblock Machines", 18113, 17101, aClass                                   , aMat.mToolQuality, 64, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "distillationtowerparts"  , NBT_DESIGNS, 1), "hTd", "PMP", 'M', OP.plate.dat(aMat), 'P', OP.pipeSmall.dat(aMat), 'T', aRegistry.getItem(18002));
@@ -1202,9 +1202,9 @@ public class Loader_MultiTileEntities implements Runnable {
 		aMat = ANY.W;                   aRegistry.add("Large Heat Exchanger(Tungsten)"                      , "Multiblock Machines", 17197, 17101, MultiTileEntityLargeHeatExchangerW.class , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "largeheatexchanger"      , NBT_OUTPUT, 32768, NBT_FUELMAP, FM.Hot, NBT_ENERGY_EMITTED, TD.Energy.HU), "DDD", "PMP", "DDD", 'M', aRegistry.getItem(18024), 'D', OP.plateDense.dat(MT.AnnealedCopper), 'P', OP.pipeHuge.dat(ANY.Cu));
 		aMat = MT.Ta4HfC5;              aRegistry.add("Large Heat Exchanger(Tantalum Hafnium Carbide)"      , "Multiblock Machines", 18304, 17101, MultiTileEntityLargeHeatExchangerT.class , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "largeheatexchanger"      , NBT_OUTPUT,131072, NBT_FUELMAP, FM.Hot, NBT_ENERGY_EMITTED, TD.Energy.HU), "DDD", "PMP", "DDD", 'M', aRegistry.getItem(18032), 'D', OP.plateDense.dat(MT.AnnealedCopper), 'P', OP.pipeHuge.dat(ANY.Cu));
 		
-		aMat = MT.TungstenSteel;        aRegistry.add("Large TungstenSteel Dryer"                           , "Multiblock Machines", 17316, 17101, MultiTileEntityDryer.class               , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS, 100.0F, NBT_RESISTANCE, 100.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "crucible"                , NBT_DESIGN, 18023, NBT_INPUT,  512,   NBT_INPUT_MIN,     512, NBT_INPUT_MAX,    4096, NBT_ENERGY_ACCEPTED, TD.Energy.HU, NBT_RECIPEMAP, RM.Drying               , NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING, T, NBT_PARALLEL,  64, NBT_PARALLEL_DURATION, T                          ),  "GGG", "SwS", "RMC", 'M', aRegistry.getItem(18023), 'R', IL.Processor_Crystal_Ruby, 'C', OD_CIRCUITS[6], 'G', OP.gearGt.dat(aMat), 'S', OP.stick.dat(aMat));
-		aMat = ANY.W;                   aRegistry.add("Large Tungsten Dryer"                                , "Multiblock Machines", 17316, 17101, MultiTileEntityDryer.class               , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS, 100.0F, NBT_RESISTANCE, 100.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "crucible"                , NBT_DESIGN, 18024, NBT_INPUT, 4096,   NBT_INPUT_MIN,    2048, NBT_INPUT_MAX,   16384, NBT_ENERGY_ACCEPTED, TD.Energy.HU, NBT_RECIPEMAP, RM.Drying               , NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING, T, NBT_PARALLEL,  64, NBT_PARALLEL_DURATION, T                          ),  "GGG", "SwS", "RMC", 'M', aRegistry.getItem(18024), 'R', IL.Processor_Crystal_Ruby, 'C', OD_CIRCUITS[6], 'G', OP.gearGt.dat(aMat), 'S', OP.stick.dat(aMat));
-		aMat = MT.Ta4HfC5;              aRegistry.add("Large Tantalum Hafnium Carbide Dryer"                , "Multiblock Machines", 17316, 17101, MultiTileEntityDryer.class               , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS, 100.0F, NBT_RESISTANCE, 100.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "crucible"                , NBT_DESIGN, 18032, NBT_INPUT,16384,   NBT_INPUT_MIN,    8192, NBT_INPUT_MAX,   65536, NBT_ENERGY_ACCEPTED, TD.Energy.HU, NBT_RECIPEMAP, RM.Drying               , NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING, T, NBT_PARALLEL,  64, NBT_PARALLEL_DURATION, T                          ),  "GGG", "SwS", "RMC", 'M', aRegistry.getItem(18032), 'R', IL.Processor_Crystal_Ruby, 'C', OD_CIRCUITS[6], 'G', OP.gearGt.dat(aMat), 'S', OP.stick.dat(aMat));
+		aMat = MT.TungstenSteel;        aRegistry.add("Large TungstenSteel Dryer"                           , "Multiblock Machines", 17316, 17101, MultiTileEntityDryer.class               , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS, 100.0F, NBT_RESISTANCE, 100.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "largedryer"              , NBT_DESIGN, 18023, NBT_INPUT,  512,   NBT_INPUT_MIN,     512, NBT_INPUT_MAX,    4096, NBT_ENERGY_ACCEPTED, TD.Energy.HU, NBT_RECIPEMAP, RM.Drying               , NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING, T, NBT_PARALLEL,  64, NBT_PARALLEL_DURATION, T                          ),  "GGG", "SwS", "RMC", 'M', aRegistry.getItem(18023), 'R', IL.Processor_Crystal_Ruby, 'C', OD_CIRCUITS[6], 'G', OP.gearGt.dat(aMat), 'S', OP.stick.dat(aMat));
+		aMat = ANY.W;                   aRegistry.add("Large Tungsten Dryer"                                , "Multiblock Machines", 17317, 17101, MultiTileEntityDryer.class               , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS, 100.0F, NBT_RESISTANCE, 100.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "largedryer"              , NBT_DESIGN, 18024, NBT_INPUT, 4096,   NBT_INPUT_MIN,    2048, NBT_INPUT_MAX,   16384, NBT_ENERGY_ACCEPTED, TD.Energy.HU, NBT_RECIPEMAP, RM.Drying               , NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING, T, NBT_PARALLEL,  64, NBT_PARALLEL_DURATION, T                          ),  "GGG", "SwS", "RMC", 'M', aRegistry.getItem(18024), 'R', IL.Processor_Crystal_Ruby, 'C', OD_CIRCUITS[6], 'G', OP.gearGt.dat(aMat), 'S', OP.stick.dat(aMat));
+		aMat = MT.Ta4HfC5;              aRegistry.add("Large Tantalum Hafnium Carbide Dryer"                , "Multiblock Machines", 17318, 17101, MultiTileEntityDryer.class               , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS, 100.0F, NBT_RESISTANCE, 100.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "largedryer"              , NBT_DESIGN, 18032, NBT_INPUT,16384,   NBT_INPUT_MIN,    8192, NBT_INPUT_MAX,   65536, NBT_ENERGY_ACCEPTED, TD.Energy.HU, NBT_RECIPEMAP, RM.Drying               , NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING, T, NBT_PARALLEL,  64, NBT_PARALLEL_DURATION, T                          ),  "GGG", "SwS", "RMC", 'M', aRegistry.getItem(18032), 'R', IL.Processor_Crystal_Ruby, 'C', OD_CIRCUITS[6], 'G', OP.gearGt.dat(aMat), 'S', OP.stick.dat(aMat));
 
 		aMat = MT.StainlessSteel;       aRegistry.add("Stainless Steel Boiler Main Barometer"               , "Multiblock Machines", 17201, 17101, MultiTileEntityLargeBoiler.class         , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "largeboiler"             , NBT_DESIGN, 18022, NBT_CAPACITY,  40960000, NBT_CAPACITY_SU,  40960000, NBT_OUTPUT_SU,  4096*STEAM_PER_EU), "PPh", "PMP", "wPP", 'M', aRegistry.getItem(18022), 'P', OP.plateDense.dat(aMat));
 		aMat = MT.Invar;                aRegistry.add("Invar Boiler Main Barometer"                         , "Multiblock Machines", 17205, 17101, MultiTileEntityLargeBoiler.class         , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "largeboiler"             , NBT_DESIGN, 18027, NBT_CAPACITY,  40960000, NBT_CAPACITY_SU,  40960000, NBT_OUTPUT_SU,  4096*STEAM_PER_EU), "PPh", "PMP", "wPP", 'M', aRegistry.getItem(18027), 'P', OP.plateDense.dat(aMat));
